# django-starter-template

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .prettierrc  .secrets.baseline  AGENTS.md  Caddyfile  Caddyfile.local  Caddyfile.prod  LICENSE  Procfile  README.md  django.just  docker-compose.production.yml  docker-compose.yml  init.py  init_project.py  justfile  mypy.ini  package-lock.json  package.json  pyproject.toml  ruff.toml  tailwind.config.js  ty.toml
.github/: copilot-instructions.md
.github/instructions/: daisyui.instructions.md  django-architecture.instructions.md  frontend.instructions.md  htmx-cotton-patterns.instructions.md  instructions.instructions.md  project-structure.instructions.md  project-structure.md  python.instructions.md  tech-stack-dependencies.instructions.md  tools.instructions.md  tools.md
.github/workflows/: ci.yml  docker-publish.yml
Docker/: Dockerfile  docker.just  entrypoint.sh  traefik-dynamic.yml  traefik.yml
docs/: authentication.md  contributing.md  deployment.md  index.md  quickstart.md  settings.md  testing.md  users.md
src/config/: settings.py  urls.py
src/demo/: urls.py  views.py
src/static/css/: input.css  output.css
src/templates/: _base.html  index.html
src/templates/account/: email.html  email_confirm.html  login.html  logout.html  password_change.html  signup.html  verification_sent.html
src/templates/cotton/: button.html  card.html
src/templates/partials/: navbar.html
src/users/: admin.py  forms.py  models.py  urls.py
src/users/migrations/: 0001_initial.py
src/web/: urls.py  views.py
tests/: conftest.py  test_init_script.py  test_settings.py
tests/users/: test_models.py
tests/web/: conftest.py  test_home.py  test_views.py
