[project]
name = "django-starter-template"
version = "0.1.0"
description = "A simple way to start your Django project with a solid foundation."
readme = "README.md"
authors = [{ name = "difegam", email = "difegam3@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.5",
    "django-allauth[socialaccount]>=65.17.0",
    "django-environ>=0.13.0",
    "gunicorn>=26.0.0",
]


[dependency-groups]
dev = [
    "django-debug-toolbar>=6.3.0",
    "django-stubs-ext>=6.0.5",
    "django-stubs[compatible-mypy]>=6.0.5",
    "mypy>=2.1.0",
    "prek>=0.4.3",
    "pytest>=9.0.3",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.12.0",
    "ruff>=0.15.0",
    "ty>=0.0.40",
]

[tool.uv]
default-groups = ["dev"]
exclude-newer = "P7D"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = 'config.settings'
pythonpath = ['src']

[tool.djlint]
profile = "django"

[tool.codespell]
skip = "migrations"
